--- a/app/src/main/res/layout/activity_section_a_form1.xml
+++ b/app/src/main/res/layout/activity_section_a_form1.xml
@@ -24,7 +24,7 @@
                 <!--kfh1-->
                 <android.support.v7.widget.CardView
                     android:id="@+id/cvkfh1"
-                    style="@style/cardView">
+                    style="@style/cardViews">
 
                     <LinearLayout style="@style/vlinearlayout">
 
@@ -43,7 +43,7 @@
                 <!-- kf1b01_EDIT-->
                 <android.support.v7.widget.CardView
                     android:id="@+id/fldGrpCVkf1b01"
-                    style="@style/cardView">
+                    style="@style/cardViews">
 
                     <LinearLayout style="@style/hlinearlayout">
 
@@ -73,7 +73,7 @@
                 <!-- kf1b02-->
                 <android.support.v7.widget.CardView
                     android:id="@+id/fldGrpCVkf1b02"
-                    style="@style/cardView">
+                    style="@style/cardViews">
 
                     <LinearLayout style="@style/vlinearlayout">
 
@@ -113,7 +113,7 @@
                 <!-- kf1b03-->
                 <android.support.v7.widget.CardView
                     android:id="@+id/fldGrpCVkf1b03"
-                    style="@style/cardView">
+                    style="@style/cardViews">
 
                     <LinearLayout style="@style/vlinearlayout">
 
@@ -173,7 +173,7 @@
                     <!-- kf1b04 Header-->
                     <android.support.v7.widget.CardView
                         android:id="@+id/fldGrpCVkf1b0"
-                        style="@style/cardView">
+                        style="@style/cardViews">
 
                         <LinearLayout style="@style/vlinearlayout">
 
@@ -208,7 +208,7 @@
                     <!-- kf1b0401-->
                     <android.support.v7.widget.CardView
                         android:id="@+id/fldGrpCVkf1b0401"
-                        style="@style/cardView">
+                        style="@style/cardViews">
 
                         <LinearLayout style="@style/vlinearlayout">
 
@@ -246,7 +246,7 @@
                     <!-- kf1b0402-->
                     <android.support.v7.widget.CardView
                         android:id="@+id/fldGrpCVkf1b0402"
-                        style="@style/cardView">
+                        style="@style/cardViews">
 
                         <LinearLayout style="@style/vlinearlayout">
 
@@ -284,7 +284,7 @@
                     <!-- kf1b0403-->
                     <android.support.v7.widget.CardView
                         android:id="@+id/fldGrpCVkf1b0403"
-                        style="@style/cardView">
+                        style="@style/cardViews">
 
                         <LinearLayout style="@style/vlinearlayout">
 
@@ -322,7 +322,7 @@
                     <!-- kf1b0404-->
                     <android.support.v7.widget.CardView
                         android:id="@+id/fldGrpCVkf1b0404"
-                        style="@style/cardView">
+                        style="@style/cardViews">
 
                         <LinearLayout style="@style/vlinearlayout">
 
@@ -360,7 +360,7 @@
                     <!-- kf1b0405-->
                     <android.support.v7.widget.CardView
                         android:id="@+id/fldGrpCVkf1b0405"
-                        style="@style/cardView">
+                        style="@style/cardViews">
 
                         <LinearLayout style="@style/vlinearlayout">
 
@@ -415,7 +415,7 @@
                     <!-- kf1b0406-->
                     <android.support.v7.widget.CardView
                         android:id="@+id/fldGrpCVkf1b0406"
-                        style="@style/cardView">
+                        style="@style/cardViews">
 
                         <LinearLayout style="@style/vlinearlayout">
 
@@ -453,7 +453,7 @@
                     <!-- kf1b0407-->
                     <android.support.v7.widget.CardView
                         android:id="@+id/fldGrpCVkf1b0407"
-                        style="@style/cardView">
+                        style="@style/cardViews">
 
                         <LinearLayout style="@style/vlinearlayout">
 
@@ -491,7 +491,7 @@
                     <!-- kf1b0408-->
                     <android.support.v7.widget.CardView
                         android:id="@+id/fldGrpCVkf1b0408"
-                        style="@style/cardView">
+                        style="@style/cardViews">
 
                         <LinearLayout style="@style/vlinearlayout">
 
@@ -529,7 +529,7 @@
                     <!-- kf1b0409-->
                     <android.support.v7.widget.CardView
                         android:id="@+id/fldGrpCVkf1b0409"
-                        style="@style/cardView">
+                        style="@style/cardViews">
 
                         <LinearLayout style="@style/vlinearlayout">
 
@@ -567,7 +567,7 @@
                     <!-- kf1b0410-->
                     <android.support.v7.widget.CardView
                         android:id="@+id/fldGrpCVkf1b0410"
-                        style="@style/cardView">
+                        style="@style/cardViews">
 
                         <LinearLayout style="@style/vlinearlayout">
 
@@ -605,7 +605,7 @@
                     <!-- kf1b0411-->
                     <android.support.v7.widget.CardView
                         android:id="@+id/fldGrpCVkf1b0411"
-                        style="@style/cardView">
+                        style="@style/cardViews">
 
                         <LinearLayout style="@style/vlinearlayout">
 
@@ -643,7 +643,7 @@
                     <!-- kf1b0412-->
                     <android.support.v7.widget.CardView
                         android:id="@+id/fldGrpCVkf1b0412"
-                        style="@style/cardView">
+                        style="@style/cardViews">
 
                         <LinearLayout style="@style/vlinearlayout">
 
@@ -681,7 +681,7 @@
                     <!-- kf1b0413-->
                     <android.support.v7.widget.CardView
                         android:id="@+id/fldGrpCVkf1b0413"
-                        style="@style/cardView">
+                        style="@style/cardViews">
 
                         <LinearLayout style="@style/vlinearlayout">
 
@@ -719,7 +719,7 @@
                     <!-- kf1b0414-->
                     <android.support.v7.widget.CardView
                         android:id="@+id/fldGrpCVkf1b0414"
-                        style="@style/cardView">
+                        style="@style/cardViews">
 
                         <LinearLayout style="@style/vlinearlayout">
 
@@ -774,7 +774,7 @@
                     <!-- kf1b0415-->
                     <android.support.v7.widget.CardView
                         android:id="@+id/fldGrpCVkf1b04c01"
-                        style="@style/cardView">
+                        style="@style/cardViews">
 
                         <LinearLayout style="@style/vlinearlayout">
 
@@ -812,11 +812,11 @@
                     <!-- kf1b05-->
                     <android.support.v7.widget.CardView
                         android:id="@+id/fldGrpCVkkf1b05maj"
-                        style="@style/cardView">
+                        style="@style/cardViews">
 
                         <android.support.v7.widget.CardView
                             android:id="@+id/fldGrpCVkkf1b05"
-                            style="@style/cardView">
+                            style="@style/cardViews">
 
                             <LinearLayout style="@style/vlinearlayout">
 
@@ -834,8 +834,7 @@
 
 
                     <!-- kf1b05 Header-->
-                    <android.support.v7.widget.CardView
-                        style="@style/cardView">
+                    <android.support.v7.widget.CardView style="@style/cardViews">
 
                         <LinearLayout style="@style/vlinearlayout">
 
@@ -854,7 +853,7 @@
                     <!-- kf1b0501-->
                     <android.support.v7.widget.CardView
                         android:id="@+id/fldGrpCVkf1b0501"
-                        style="@style/cardView">
+                        style="@style/cardViews">
 
                         <LinearLayout style="@style/vlinearlayout">
 
@@ -892,7 +891,7 @@
                     <!-- kf1b0502-->
                     <android.support.v7.widget.CardView
                         android:id="@+id/fldGrpCVkf1b0502"
-                        style="@style/cardView">
+                        style="@style/cardViews">
 
                         <LinearLayout style="@style/vlinearlayout">
 
@@ -930,7 +929,7 @@
                     <!-- kf1b0503-->
                     <android.support.v7.widget.CardView
                         android:id="@+id/fldGrpCVkf1b0503"
-                        style="@style/cardView">
+                        style="@style/cardViews">
 
                         <LinearLayout style="@style/vlinearlayout">
 
@@ -968,7 +967,7 @@
                     <!-- kf1b0504-->
                     <android.support.v7.widget.CardView
                         android:id="@+id/fldGrpCVkf1b0504"
-                        style="@style/cardView">
+                        style="@style/cardViews">
 
                         <LinearLayout style="@style/vlinearlayout">
 
@@ -1006,7 +1005,7 @@
                     <!-- kf1b0596-->
                     <android.support.v7.widget.CardView
                         android:id="@+id/fldGrpCVkf1b0596"
-                        style="@style/cardView">
+                        style="@style/cardViews">
 
                         <LinearLayout style="@style/vlinearlayout">
 
@@ -1051,7 +1050,7 @@
                     <!-- kf1b06-->
                     <android.support.v7.widget.CardView
                         android:id="@+id/fldGrpCVkf1b06"
-                        style="@style/cardView">
+                        style="@style/cardViews">
 
                         <LinearLayout style="@style/vlinearlayout">
 
@@ -1089,7 +1088,7 @@
                     <!-- kf1b0602-->
                     <android.support.v7.widget.CardView
                         android:id="@+id/fldGrpCVkf1b0602"
-                        style="@style/cardView">
+                        style="@style/cardViews">
 
                         <LinearLayout style="@style/vlinearlayout">
 
@@ -1128,7 +1127,7 @@
                     <!-- kf1b07 Header-->
                     <android.support.v7.widget.CardView
                         android:id="@+id/fldGrpCVkkf1b07"
-                        style="@style/cardView">
+                        style="@style/cardViews">
 
                         <LinearLayout style="@style/vlinearlayout">
 
@@ -1147,7 +1146,7 @@
                     <!-- kf1b07-->
                     <android.support.v7.widget.CardView
                         android:id="@+id/fldGrpCVkf1b07"
-                        style="@style/cardView">
+                        style="@style/cardViews">
 
                         <LinearLayout style="@style/vlinearlayout">
 
@@ -1208,7 +1207,7 @@
                         <!-- kf1b08-->
                         <android.support.v7.widget.CardView
                             android:id="@+id/fldGrpCVkf1b08"
-                            style="@style/cardView">
+                            style="@style/cardViews">
 
                             <LinearLayout style="@style/vlinearlayout">
 
@@ -1245,7 +1244,7 @@
                         <!-- kf1b09-->
                         <android.support.v7.widget.CardView
                             android:id="@+id/fldGrpCVkf1b09"
-                            style="@style/cardView"
+                            style="@style/cardViews"
                             android:visibility="@{kf1b08b.checked ? View.VISIBLE : View.GONE}">
 
                             <LinearLayout style="@style/vlinearlayout">
@@ -1301,7 +1300,7 @@
                             <!-- kf1b10-->
                             <android.support.v7.widget.CardView
                                 android:id="@+id/fldGrpCVkf1b010"
-                                style="@style/cardView">
+                                style="@style/cardViews">
 
                                 <LinearLayout style="@style/vlinearlayout">
 
@@ -1338,7 +1337,7 @@
                             <!-- kf1b11-->
                             <android.support.v7.widget.CardView
                                 android:id="@+id/fldGrpCVkf1b11"
-                                style="@style/cardView"
+                                style="@style/cardViews"
                                 android:visibility="@{kf1b10a.checked ? View.VISIBLE : View.GONE}">
 
                                 <LinearLayout style="@style/vlinearlayout">
