--- a/app/src/main/res/layout/activity_section_c_form2.xml
+++ b/app/src/main/res/layout/activity_section_c_form2.xml
@@ -25,7 +25,7 @@
                 <!-- kf2c01_TextView-->
                 <android.support.v7.widget.CardView
                     android:id="@+id/fldGrpCVkf2c01"
-                    style="@style/cardView">
+                    style="@style/cardViews">
 
                     <LinearLayout style="@style/hlinearlayout">
 
@@ -56,7 +56,7 @@
                 <!-- kf2c02_TextView-->
                 <android.support.v7.widget.CardView
                     android:id="@+id/fldGrpCVkf2c02"
-                    style="@style/cardView">
+                    style="@style/cardViews">
 
                     <LinearLayout style="@style/hlinearlayout">
 
@@ -85,7 +85,7 @@
                 <!-- kf2c03_TextView-->
                 <android.support.v7.widget.CardView
                     android:id="@+id/fldGrpCVkf2c03"
-                    style="@style/cardView">
+                    style="@style/cardViews">
 
                     <LinearLayout style="@style/hlinearlayout">
 
@@ -114,7 +114,7 @@
                 <!-- kf2c04_TextView-->
                 <android.support.v7.widget.CardView
                     android:id="@+id/fldGrpCVkf2c04"
-                    style="@style/cardView">
+                    style="@style/cardViews">
 
                     <LinearLayout style="@style/vlinearlayout">
 
@@ -151,7 +151,7 @@
                 <!-- kf2c05_TextView-->
                 <android.support.v7.widget.CardView
                     android:id="@+id/fldGrpCVkf2c05"
-                    style="@style/cardView"
+                    style="@style/cardViews"
                     android:visibility="@{kf2c04b.checked ? View.VISIBLE : View.GONE}">
 
                     <LinearLayout style="@style/vlinearlayout">
@@ -206,7 +206,7 @@
                 <!-- kf2c06_TextView-->
                 <android.support.v7.widget.CardView
                     android:id="@+id/fldGrpCVkf2c06"
-                    style="@style/cardView">
+                    style="@style/cardViews">
 
                     <LinearLayout style="@style/vlinearlayout">
 
@@ -257,7 +257,7 @@
                 <!-- kf2c07_TextView-->
                 <android.support.v7.widget.CardView
                     android:id="@+id/fldGrpCVkf2c07"
-                    style="@style/cardView">
+                    style="@style/cardViews">
 
                     <LinearLayout style="@style/vlinearlayout">
 
@@ -294,7 +294,7 @@
                 <!-- kf2c08_TextView-->
                 <android.support.v7.widget.CardView
                     android:id="@+id/fldGrpCVkf2c08"
-                    style="@style/cardView">
+                    style="@style/cardViews">
 
                     <LinearLayout style="@style/vlinearlayout">
 
@@ -338,7 +338,7 @@
                 <!-- kf2c09_TextView-->
                 <android.support.v7.widget.CardView
                     android:id="@+id/fldGrpCVkf2c09"
-                    style="@style/cardView">
+                    style="@style/cardViews">
 
                     <LinearLayout style="@style/vlinearlayout">
 
@@ -392,7 +392,7 @@
                 <!-- kf2c10_TextView-->
                 <android.support.v7.widget.CardView
                     android:id="@+id/fldGrpCVkf2c10"
-                    style="@style/cardView">
+                    style="@style/cardViews">
 
                     <LinearLayout style="@style/vlinearlayout">
 
@@ -436,7 +436,7 @@
                 <!-- kf2c11_TextView-->
                 <android.support.v7.widget.CardView
                     android:id="@+id/fldGrpCVkf2c11"
-                    style="@style/cardView"
+                    style="@style/cardViews"
                     android:visibility="@{kf2c10a.checked ? View.VISIBLE : View.GONE}">
 
                     <LinearLayout style="@style/vlinearlayout">
