--- a/app/src/main/res/layout/activity_section_e_form3.xml
+++ b/app/src/main/res/layout/activity_section_e_form3.xml
@@ -24,7 +24,7 @@
                 <!-- kf3e01-->
                 <android.support.v7.widget.CardView
                     android:id="@+id/fldGrpCVkf3e01"
-                    style="@style/cardView">
+                    style="@style/cardViews">
 
                     <LinearLayout style="@style/vlinearlayout">
 
@@ -48,7 +48,7 @@
                 <!-- kf3e22-->
                 <android.support.v7.widget.CardView
                     android:id="@+id/fldGrpCVkf3e22"
-                    style="@style/cardView">
+                    style="@style/cardViews">
 
                     <LinearLayout style="@style/vlinearlayout">
 
@@ -89,7 +89,7 @@
                     <!-- kf3e02-->
                     <android.support.v7.widget.CardView
                         android:id="@+id/fldGrpCVkf3e02"
-                        style="@style/cardView">
+                        style="@style/cardViews">
 
                         <LinearLayout style="@style/vlinearlayout">
 
@@ -120,7 +120,7 @@
                     <!-- kf3e03-->
                     <android.support.v7.widget.CardView
                         android:id="@+id/fldGrpCVkf3e03"
-                        style="@style/cardView"
+                        style="@style/cardViews"
                         android:visibility='@{kf3e02b.checked? View.GONE : View.VISIBLE}'>
 
                         <LinearLayout style="@style/vlinearlayout">
@@ -162,9 +162,7 @@
                     style="@style/linearlayout_view_wt_bound">
 
                     <!-- H1-->
-                    <android.support.v7.widget.CardView
-
-                        style="@style/cardView">
+                    <android.support.v7.widget.CardView style="@style/cardViews">
 
                         <LinearLayout style="@style/vlinearlayout">
 
@@ -177,9 +175,7 @@
                     </android.support.v7.widget.CardView>
 
                     <!-- H2-->
-                    <android.support.v7.widget.CardView
-
-                        style="@style/cardView">
+                    <android.support.v7.widget.CardView style="@style/cardViews">
 
                         <LinearLayout style="@style/vlinearlayout">
 
@@ -193,7 +189,7 @@
                     <!-- kf3e04-->
                     <android.support.v7.widget.CardView
                         android:id="@+id/fldGrpCVkf3e04"
-                        style="@style/cardView">
+                        style="@style/cardViews">
 
                         <LinearLayout
                             style="@style/vlinearlayout"
@@ -228,9 +224,7 @@
                     </android.support.v7.widget.CardView>
 
                     <!-- H3-->
-                    <android.support.v7.widget.CardView
-
-                        style="@style/cardView">
+                    <android.support.v7.widget.CardView style="@style/cardViews">
 
                         <LinearLayout style="@style/vlinearlayout">
 
@@ -244,7 +238,7 @@
                     <!-- kf3e05-->
                     <android.support.v7.widget.CardView
                         android:id="@+id/fldGrpCVkf3e05"
-                        style="@style/cardView">
+                        style="@style/cardViews">
 
                         <LinearLayout style="@style/vlinearlayout">
 
@@ -268,7 +262,7 @@
                     <!-- kf3e06-->
                     <android.support.v7.widget.CardView
                         android:id="@+id/fldGrpCVkf3e06"
-                        style="@style/cardView">
+                        style="@style/cardViews">
 
                         <LinearLayout style="@style/vlinearlayout">
 
@@ -292,7 +286,7 @@
                     <!-- kf3e07-->
                     <android.support.v7.widget.CardView
                         android:id="@+id/fldGrpCVkf3e07"
-                        style="@style/cardView">
+                        style="@style/cardViews">
 
                         <LinearLayout style="@style/vlinearlayout">
 
@@ -323,7 +317,7 @@
                     <!-- kf3e08-->
                     <android.support.v7.widget.CardView
                         android:id="@+id/fldGrpCVkf3e08"
-                        style="@style/cardView">
+                        style="@style/cardViews">
 
                         <LinearLayout style="@style/vlinearlayout">
 
@@ -368,7 +362,7 @@
                     <!-- kf3e09-->
                     <android.support.v7.widget.CardView
                         android:id="@+id/fldGrpCVkf3e09"
-                        style="@style/cardView">
+                        style="@style/cardViews">
 
                         <LinearLayout style="@style/vlinearlayout">
 
@@ -413,7 +407,7 @@
                     <!-- kf3e10-->
                     <android.support.v7.widget.CardView
                         android:id="@+id/fldGrpCVkf3e10"
-                        style="@style/cardView">
+                        style="@style/cardViews">
 
                         <LinearLayout style="@style/vlinearlayout">
 
@@ -444,7 +438,7 @@
                     <!-- kf3e11-->
                     <android.support.v7.widget.CardView
                         android:id="@+id/fldGrpCVkf3e11"
-                        style="@style/cardView">
+                        style="@style/cardViews">
 
                         <LinearLayout style="@style/vlinearlayout">
 
@@ -475,7 +469,7 @@
                     <!-- kf3e12-->
                     <android.support.v7.widget.CardView
                         android:id="@+id/fldGrpCVkf3e12"
-                        style="@style/cardView">
+                        style="@style/cardViews">
 
                         <LinearLayout style="@style/vlinearlayout">
 
@@ -545,7 +539,7 @@
                     <!-- kf3e13-->
                     <android.support.v7.widget.CardView
                         android:id="@+id/fldGrpCVkf3e13"
-                        style="@style/cardView">
+                        style="@style/cardViews">
 
                         <LinearLayout style="@style/vlinearlayout">
 
@@ -582,7 +576,7 @@
                         <!-- kf3e14-->
                         <android.support.v7.widget.CardView
                             android:id="@+id/fldGrpCVkf3e14"
-                            style="@style/cardView">
+                            style="@style/cardViews">
 
                             <LinearLayout style="@style/vlinearlayout">
 
@@ -613,7 +607,7 @@
                         <!-- kf3e15-->
                         <android.support.v7.widget.CardView
                             android:id="@+id/fldGrpCVkf3e15"
-                            style="@style/cardView">
+                            style="@style/cardViews">
 
                             <LinearLayout style="@style/vlinearlayout">
 
@@ -644,7 +638,7 @@
                         <!-- kf3e16-->
                         <android.support.v7.widget.CardView
                             android:id="@+id/fldGrpCVkf3e16"
-                            style="@style/cardView">
+                            style="@style/cardViews">
 
                             <LinearLayout style="@style/vlinearlayout">
 
@@ -675,7 +669,7 @@
                         <!-- kf3e17-->
                         <android.support.v7.widget.CardView
                             android:id="@+id/fldGrpCVkf3e17"
-                            style="@style/cardView">
+                            style="@style/cardViews">
 
                             <LinearLayout style="@style/vlinearlayout">
 
@@ -723,7 +717,7 @@
                     <!-- kf3e18-->
                     <android.support.v7.widget.CardView
                         android:id="@+id/fldGrpCVkf3e18"
-                        style="@style/cardView">
+                        style="@style/cardViews">
 
                         <LinearLayout style="@style/vlinearlayout">
 
@@ -768,7 +762,7 @@
                     <!-- kf3e19-->
                     <android.support.v7.widget.CardView
                         android:id="@+id/fldGrpCVkf3e19"
-                        style="@style/cardView">
+                        style="@style/cardViews">
 
                         <LinearLayout style="@style/vlinearlayout">
 
@@ -805,7 +799,7 @@
                         <!-- kf3e20-->
                         <android.support.v7.widget.CardView
                             android:id="@+id/fldGrpCVkf3e20"
-                            style="@style/cardView">
+                            style="@style/cardViews">
 
                             <LinearLayout style="@style/vlinearlayout">
 
@@ -836,7 +830,7 @@
                         <!-- kf3e21-->
                         <android.support.v7.widget.CardView
                             android:id="@+id/fldGrpCVkf3e21"
-                            style="@style/cardView"
+                            style="@style/cardViews"
                             android:visibility='@{kf3e20a.checked? View.GONE : View.VISIBLE}'>
 
                             <LinearLayout style="@style/vlinearlayout">
