--- a/app/src/main/res/layout/activity_section_d_form3.xml
+++ b/app/src/main/res/layout/activity_section_d_form3.xml
@@ -28,7 +28,7 @@
                     <!-- kf3d19-->
                     <android.support.v7.widget.CardView
                         android:id="@+id/fldGrpCVkf3d19"
-                        style="@style/cardView">
+                        style="@style/cardViews">
 
                         <LinearLayout style="@style/vlinearlayout">
 
@@ -64,7 +64,7 @@
                     <!-- kf3d01-->
                     <android.support.v7.widget.CardView
                         android:id="@+id/fldGrpCVkf3d01"
-                        style="@style/cardView">
+                        style="@style/cardViews">
 
                         <LinearLayout style="@style/vlinearlayout">
 
@@ -123,7 +123,7 @@
                     <!-- kf3d02-->
                     <android.support.v7.widget.CardView
                         android:id="@+id/fldGrpCVkf3d02"
-                        style="@style/cardView"
+                        style="@style/cardViews"
                         android:visibility='@{!kf3d01e.checked ? View.GONE : View.VISIBLE}'>
 
                         <LinearLayout style="@style/vlinearlayout">
@@ -216,7 +216,7 @@
                     <!-- kf3d03-->
                     <android.support.v7.widget.CardView
                         android:id="@+id/fldGrpCVkf3d03"
-                        style="@style/cardView">
+                        style="@style/cardViews">
 
                         <LinearLayout style="@style/vlinearlayout">
 
@@ -275,7 +275,7 @@
                     <!-- kf3d04-->
                     <android.support.v7.widget.CardView
                         android:id="@+id/fldGrpCVkf3d04"
-                        style="@style/cardView">
+                        style="@style/cardViews">
 
                         <LinearLayout style="@style/vlinearlayout">
 
@@ -311,7 +311,7 @@
                     <!-- kf3d05-->
                     <android.support.v7.widget.CardView
                         android:id="@+id/fldGrpCVkf3d05"
-                        style="@style/cardView"
+                        style="@style/cardViews"
                         android:visibility='@{kf3d04a.checked? View.GONE : View.VISIBLE}'>
 
                         <LinearLayout style="@style/vlinearlayout">
@@ -431,7 +431,7 @@
                 <!-- kf3d06-->
                 <android.support.v7.widget.CardView
                     android:id="@+id/fldGrpCVkf3d06"
-                    style="@style/cardView">
+                    style="@style/cardViews">
 
                     <LinearLayout style="@style/vlinearlayout">
 
@@ -462,7 +462,7 @@
                 <!-- kf3d07-->
                 <android.support.v7.widget.CardView
                     android:id="@+id/fldGrpCVkf3d07"
-                    style="@style/cardView"
+                    style="@style/cardViews"
                     android:visibility='@{kf3d06a.checked? View.GONE : View.VISIBLE}'>
 
                     <LinearLayout style="@style/vlinearlayout">
@@ -555,7 +555,7 @@
                 <!-- kf3d08-->
                 <android.support.v7.widget.CardView
                     android:id="@+id/fldGrpCVkf3d08"
-                    style="@style/cardView">
+                    style="@style/cardViews">
 
                     <LinearLayout style="@style/vlinearlayout">
 
@@ -591,7 +591,7 @@
                     <!-- kf3d09-->
                     <android.support.v7.widget.CardView
                         android:id="@+id/fldGrpCVkf3d09"
-                        style="@style/cardView">
+                        style="@style/cardViews">
 
                         <LinearLayout style="@style/vlinearlayout">
 
@@ -622,7 +622,7 @@
                     <!-- kf3d10-->
                     <android.support.v7.widget.CardView
                         android:id="@+id/fldGrpCVkf3d10"
-                        style="@style/cardView"
+                        style="@style/cardViews"
                         android:visibility="@{kf3d09a.checked ? View.VISIBLE : View.GONE}">
 
                         <LinearLayout style="@style/vlinearlayout">
@@ -674,7 +674,7 @@
                 <!-- kf3d11-->
                 <android.support.v7.widget.CardView
                     android:id="@+id/fldGrpCVkf3d11"
-                    style="@style/cardView">
+                    style="@style/cardViews">
 
                     <LinearLayout style="@style/vlinearlayout">
 
@@ -698,7 +698,7 @@
                 <!-- kf3d12-->
                 <android.support.v7.widget.CardView
                     android:id="@+id/fldGrpCVkf3d12"
-                    style="@style/cardView">
+                    style="@style/cardViews">
 
                     <LinearLayout style="@style/vlinearlayout">
 
@@ -729,7 +729,7 @@
                 <!-- kf3d13-->
                 <android.support.v7.widget.CardView
                     android:id="@+id/fldGrpCVkf3d13"
-                    style="@style/cardView">
+                    style="@style/cardViews">
 
                     <LinearLayout style="@style/vlinearlayout">
 
@@ -753,7 +753,7 @@
                 <!-- kf3d14-->
                 <android.support.v7.widget.CardView
                     android:id="@+id/fldGrpCVkf3d14"
-                    style="@style/cardView">
+                    style="@style/cardViews">
 
                     <LinearLayout style="@style/vlinearlayout">
 
@@ -783,7 +783,7 @@
                     <!-- kf3d15-->
                     <android.support.v7.widget.CardView
                         android:id="@+id/fldGrpCVkf3d15"
-                        style="@style/cardView">
+                        style="@style/cardViews">
 
                         <LinearLayout style="@style/vlinearlayout">
 
@@ -819,7 +819,7 @@
                         <!-- kf3d16-->
                         <android.support.v7.widget.CardView
                             android:id="@+id/fldGrpCVkf3d16"
-                            style="@style/cardView">
+                            style="@style/cardViews">
 
                             <LinearLayout style="@style/vlinearlayout">
 
@@ -877,7 +877,7 @@
                         <!-- kf3d17-->
                         <android.support.v7.widget.CardView
                             android:id="@+id/fldGrpCVkf3d17"
-                            style="@style/cardView">
+                            style="@style/cardViews">
 
                             <LinearLayout style="@style/vlinearlayout">
 
@@ -992,7 +992,7 @@
                         <!-- kf3d18-->
                         <android.support.v7.widget.CardView
                             android:id="@+id/fldGrpCVkf3d18"
-                            style="@style/cardView">
+                            style="@style/cardViews">
 
                             <LinearLayout style="@style/vlinearlayout">
 
