--- a/app/src/main/res/layout/activity_section_f_form3.xml
+++ b/app/src/main/res/layout/activity_section_f_form3.xml
@@ -23,7 +23,7 @@
                 <!-- kf3f01-->
                 <android.support.v7.widget.CardView
                     android:id="@+id/fldGrpCVkf3f01"
-                    style="@style/cardView">
+                    style="@style/cardViews">
 
                     <LinearLayout style="@style/vlinearlayout">
 
@@ -59,7 +59,7 @@
                 <!-- kf3f02-->
                 <android.support.v7.widget.CardView
                     android:id="@+id/fldGrpCVkf3f02"
-                    style="@style/cardView">
+                    style="@style/cardViews">
 
                     <LinearLayout style="@style/vlinearlayout">
 
@@ -118,7 +118,7 @@
                 <!-- kf3f03-->
                 <android.support.v7.widget.CardView
                     android:id="@+id/fldGrpCVkf3f03"
-                    style="@style/cardView">
+                    style="@style/cardViews">
 
                     <LinearLayout style="@style/vlinearlayout">
 
@@ -149,7 +149,7 @@
                 <!-- kf3f04-->
                 <android.support.v7.widget.CardView
                     android:id="@+id/fldGrpCVkf3f04"
-                    style="@style/cardView"
+                    style="@style/cardViews"
                     android:visibility='@{kf3f03b.checked? View.GONE : View.VISIBLE}'>
 
                     <LinearLayout style="@style/vlinearlayout">
@@ -205,7 +205,7 @@
                 <!-- kf3f05-->
                 <android.support.v7.widget.CardView
                     android:id="@+id/fldGrpCVkf3f05"
-                    style="@style/cardView">
+                    style="@style/cardViews">
 
                     <LinearLayout style="@style/vlinearlayout">
 
@@ -254,7 +254,7 @@
                 <!-- kf3f06-->
                 <android.support.v7.widget.CardView
                     android:id="@+id/fldGrpCVkf3f06"
-                    style="@style/cardView">
+                    style="@style/cardViews">
 
                     <LinearLayout style="@style/vlinearlayout">
 
